LAPR4/LAPR4_final_project/build/generated-src/antlr/main/lapr4/blue/s3/lang/n1150433/formula/compiler/Formula4Parser.java
// Generated from lapr4/blue/s3/lang/n1150433/formula/compiler/Formula4.g4 by ANTLR 4.7

    package lapr4.blue.s3.lang.n1150433.formula.compiler;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Formula4Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EVAL=1, DOWHILE=2, WHILEDO=3, FOR=4, FUNCTION=5, CELL_REF=6, VAR=7, STRING=8, 
		QUOT=9, NUMBER=10, EQ=11, NEQ=12, LTEQ=13, GTEQ=14, GT=15, LT=16, AMP=17, 
		PLUS=18, MINUS=19, MULTI=20, DIV=21, POWER=22, PERCENT=23, COLON=24, UNDERSCORE=25, 
		ATSYMBOL=26, COMMA=27, SEMI=28, LPAR=29, RPAR=30, L_CURLY_BRACKET=31, 
		R_CURLY_BRACKET=32, ASSIGN=33, TAGCURRENCY=34, CURRENCY_SYMBOL=35, MONEY_NUM=36, 
		WS=37;
	public static final int
		RULE_expression = 0, RULE_money_expression = 1, RULE_moneys = 2, RULE_money_operation = 3, 
		RULE_block = 4, RULE_comparison = 5, RULE_concatenation = 6, RULE_for_loop = 7, 
		RULE_while_loop = 8, RULE_eval = 9, RULE_atom = 10, RULE_assignment = 11, 
		RULE_function_call = 12, RULE_reference = 13, RULE_literal = 14;
	public static final String[] ruleNames = {
		"expression", "money_expression", "moneys", "money_operation", "block", 
		"comparison", "concatenation", "for_loop", "while_loop", "eval", "atom", 
		"assignment", "function_call", "reference", "literal"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, "'\"'", null, "'='", 
		"'<>'", "'<='", "'>='", "'>'", "'<'", "'&'", "'+'", "'-'", "'*'", "'/'", 
		"'^'", "'%'", "':'", "'_'", "'@'", "','", "';'", "'('", "')'", "'{'", 
		"'}'", "':='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "EVAL", "DOWHILE", "WHILEDO", "FOR", "FUNCTION", "CELL_REF", "VAR", 
		"STRING", "QUOT", "NUMBER", "EQ", "NEQ", "LTEQ", "GTEQ", "GT", "LT", "AMP", 
		"PLUS", "MINUS", "MULTI", "DIV", "POWER", "PERCENT", "COLON", "UNDERSCORE", 
		"ATSYMBOL", "COMMA", "SEMI", "LPAR", "RPAR", "L_CURLY_BRACKET", "R_CURLY_BRACKET", 
		"ASSIGN", "TAGCURRENCY", "CURRENCY_SYMBOL", "MONEY_NUM", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Formula4.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Formula4Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode EQ() { return getToken(Formula4Parser.EQ, 0); }
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Formula4Parser.EOF, 0); }
		public Money_expressionContext money_expression() {
			return getRuleContext(Money_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Formula4Visitor ) return ((Formula4Visitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		try {
			setState(35);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQ:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				match(EQ);
				setState(31);
				comparison();
				setState(32);
				match(EOF);
				}
				break;
			case TAGCURRENCY:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				money_expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Money_expressionContext extends ParserRuleContext {
		public TerminalNode TAGCURRENCY() { return getToken(Formula4Parser.TAGCURRENCY, 0); }
		public TerminalNode L_CURLY_BRACKET() { return getToken(Formula4Parser.L_CURLY_BRACKET, 0); }
		public MoneysContext moneys() {
			return getRuleContext(MoneysContext.class,0);
		}
		public TerminalNode R_CURLY_BRACKET() { return getToken(Formula4Parser.R_CURLY_BRACKET, 0); }
		public Money_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_money_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).enterMoney_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).exitMoney_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Formula4Visitor ) return ((Formula4Visitor<? extends T>)visitor).visitMoney_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Money_expressionContext money_expression() throws RecognitionException {
		Money_expressionContext _localctx = new Money_expressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_money_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			match(TAGCURRENCY);
			setState(38);
			match(L_CURLY_BRACKET);
			setState(39);
			moneys();
			setState(40);
			match(R_CURLY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoneysContext extends ParserRuleContext {
		public List<TerminalNode> MONEY_NUM() { return getTokens(Formula4Parser.MONEY_NUM); }
		public TerminalNode MONEY_NUM(int i) {
			return getToken(Formula4Parser.MONEY_NUM, i);
		}
		public List<Money_operationContext> money_operation() {
			return getRuleContexts(Money_operationContext.class);
		}
		public Money_operationContext money_operation(int i) {
			return getRuleContext(Money_operationContext.class,i);
		}
		public MoneysContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moneys; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).enterMoneys(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).exitMoneys(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Formula4Visitor ) return ((Formula4Visitor<? extends T>)visitor).visitMoneys(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MoneysContext moneys() throws RecognitionException {
		MoneysContext _localctx = new MoneysContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moneys);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			match(MONEY_NUM);
			setState(46); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(43);
				money_operation();
				setState(44);
				match(MONEY_NUM);
				}
				}
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULTI) | (1L << DIV))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Money_operationContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(Formula4Parser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(Formula4Parser.MINUS, 0); }
		public TerminalNode MULTI() { return getToken(Formula4Parser.MULTI, 0); }
		public TerminalNode DIV() { return getToken(Formula4Parser.DIV, 0); }
		public Money_operationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_money_operation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).enterMoney_operation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).exitMoney_operation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Formula4Visitor ) return ((Formula4Visitor<? extends T>)visitor).visitMoney_operation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Money_operationContext money_operation() throws RecognitionException {
		Money_operationContext _localctx = new Money_operationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_money_operation);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PLUS) | (1L << MINUS) | (1L << MULTI) | (1L << DIV))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode L_CURLY_BRACKET() { return getToken(Formula4Parser.L_CURLY_BRACKET, 0); }
		public List<ComparisonContext> comparison() {
			return getRuleContexts(ComparisonContext.class);
		}
		public ComparisonContext comparison(int i) {
			return getRuleContext(ComparisonContext.class,i);
		}
		public TerminalNode R_CURLY_BRACKET() { return getToken(Formula4Parser.R_CURLY_BRACKET, 0); }
		public List<TerminalNode> SEMI() { return getTokens(Formula4Parser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(Formula4Parser.SEMI, i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Formula4Visitor ) return ((Formula4Visitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			match(L_CURLY_BRACKET);
			setState(53);
			comparison();
			setState(58);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(54);
				match(SEMI);
				setState(55);
				comparison();
				}
				}
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			match(R_CURLY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonContext extends ParserRuleContext {
		public List<ConcatenationContext> concatenation() {
			return getRuleContexts(ConcatenationContext.class);
		}
		public ConcatenationContext concatenation(int i) {
			return getRuleContext(ConcatenationContext.class,i);
		}
		public TerminalNode EQ() { return getToken(Formula4Parser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(Formula4Parser.NEQ, 0); }
		public TerminalNode GT() { return getToken(Formula4Parser.GT, 0); }
		public TerminalNode LT() { return getToken(Formula4Parser.LT, 0); }
		public TerminalNode LTEQ() { return getToken(Formula4Parser.LTEQ, 0); }
		public TerminalNode GTEQ() { return getToken(Formula4Parser.GTEQ, 0); }
		public TerminalNode ASSIGN() { return getToken(Formula4Parser.ASSIGN, 0); }
		public ComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).enterComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).exitComparison(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Formula4Visitor ) return ((Formula4Visitor<? extends T>)visitor).visitComparison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonContext comparison() throws RecognitionException {
		ComparisonContext _localctx = new ComparisonContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comparison);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			concatenation(0);
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << NEQ) | (1L << LTEQ) | (1L << GTEQ) | (1L << GT) | (1L << LT) | (1L << ASSIGN))) != 0)) {
				{
				setState(64);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQ) | (1L << NEQ) | (1L << LTEQ) | (1L << GTEQ) | (1L << GT) | (1L << LT) | (1L << ASSIGN))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(65);
				concatenation(0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConcatenationContext extends ParserRuleContext {
		public AtomContext atom() {
			return getRuleContext(AtomContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(Formula4Parser.MINUS, 0); }
		public For_loopContext for_loop() {
			return getRuleContext(For_loopContext.class,0);
		}
		public While_loopContext while_loop() {
			return getRuleContext(While_loopContext.class,0);
		}
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public List<ConcatenationContext> concatenation() {
			return getRuleContexts(ConcatenationContext.class);
		}
		public ConcatenationContext concatenation(int i) {
			return getRuleContext(ConcatenationContext.class,i);
		}
		public TerminalNode POWER() { return getToken(Formula4Parser.POWER, 0); }
		public TerminalNode MULTI() { return getToken(Formula4Parser.MULTI, 0); }
		public TerminalNode DIV() { return getToken(Formula4Parser.DIV, 0); }
		public TerminalNode PLUS() { return getToken(Formula4Parser.PLUS, 0); }
		public TerminalNode AMP() { return getToken(Formula4Parser.AMP, 0); }
		public TerminalNode PERCENT() { return getToken(Formula4Parser.PERCENT, 0); }
		public ConcatenationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concatenation; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).enterConcatenation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).exitConcatenation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Formula4Visitor ) return ((Formula4Visitor<? extends T>)visitor).visitConcatenation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConcatenationContext concatenation() throws RecognitionException {
		return concatenation(0);
	}

	private ConcatenationContext concatenation(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConcatenationContext _localctx = new ConcatenationContext(_ctx, _parentState);
		ConcatenationContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_concatenation, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION:
			case CELL_REF:
			case VAR:
			case STRING:
			case NUMBER:
			case MINUS:
			case LPAR:
			case L_CURLY_BRACKET:
				{
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MINUS) {
					{
					setState(69);
					match(MINUS);
					}
				}

				setState(72);
				atom();
				}
				break;
			case FOR:
				{
				setState(73);
				for_loop();
				}
				break;
			case DOWHILE:
			case WHILEDO:
				{
				setState(74);
				while_loop();
				}
				break;
			case EVAL:
				{
				setState(75);
				eval();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(94);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(92);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new ConcatenationContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_concatenation);
						setState(78);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(79);
						match(POWER);
						setState(80);
						concatenation(7);
						}
						break;
					case 2:
						{
						_localctx = new ConcatenationContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_concatenation);
						setState(81);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(82);
						_la = _input.LA(1);
						if ( !(_la==MULTI || _la==DIV) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(83);
						concatenation(7);
						}
						break;
					case 3:
						{
						_localctx = new ConcatenationContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_concatenation);
						setState(84);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(85);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(86);
						concatenation(6);
						}
						break;
					case 4:
						{
						_localctx = new ConcatenationContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_concatenation);
						setState(87);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(88);
						match(AMP);
						setState(89);
						concatenation(5);
						}
						break;
					case 5:
						{
						_localctx = new ConcatenationContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_concatenation);
						setState(90);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(91);
						match(PERCENT);
						}
						break;
					}
					} 
				}
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class For_loopContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(Formula4Parser.FOR, 0); }
		public TerminalNode L_CURLY_BRACKET() { return getToken(Formula4Parser.L_CURLY_BRACKET, 0); }
		public List<ComparisonContext> comparison() {
			return getRuleContexts(ComparisonContext.class);
		}
		public ComparisonContext comparison(int i) {
			return getRuleContext(ComparisonContext.class,i);
		}
		public TerminalNode R_CURLY_BRACKET() { return getToken(Formula4Parser.R_CURLY_BRACKET, 0); }
		public List<TerminalNode> SEMI() { return getTokens(Formula4Parser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(Formula4Parser.SEMI, i);
		}
		public For_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_for_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).enterFor_loop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).exitFor_loop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Formula4Visitor ) return ((Formula4Visitor<? extends T>)visitor).visitFor_loop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final For_loopContext for_loop() throws RecognitionException {
		For_loopContext _localctx = new For_loopContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_for_loop);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(FOR);
			setState(98);
			match(L_CURLY_BRACKET);
			setState(99);
			comparison();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(100);
				match(SEMI);
				setState(101);
				comparison();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(R_CURLY_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class While_loopContext extends ParserRuleContext {
		public TerminalNode DOWHILE() { return getToken(Formula4Parser.DOWHILE, 0); }
		public TerminalNode LPAR() { return getToken(Formula4Parser.LPAR, 0); }
		public List<ComparisonContext> comparison() {
			return getRuleContexts(ComparisonContext.class);
		}
		public ComparisonContext comparison(int i) {
			return getRuleContext(ComparisonContext.class,i);
		}
		public TerminalNode RPAR() { return getToken(Formula4Parser.RPAR, 0); }
		public List<TerminalNode> SEMI() { return getTokens(Formula4Parser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(Formula4Parser.SEMI, i);
		}
		public TerminalNode WHILEDO() { return getToken(Formula4Parser.WHILEDO, 0); }
		public While_loopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while_loop; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).enterWhile_loop(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof Formula4Listener ) ((Formula4Listener)listener).exitWhile_loop(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Formula4Visitor ) return ((Formula4Visitor<? extends T>)visitor).visitWhile_loop(this);
			else return visitor.visitChildren(this);
		}
	}
